<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        app:alignItems="center"
        app:flexDirection="row"
        app:justifyContent="space_between">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/name"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/item_number2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_number"
                android:text="@string/honor"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="@dimen/text_size"
                tools:ignore="SpUsage" />
        </LinearLayout>
        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/button_shape"
            android:text="@string/starPlus"
            android:textColor="@color/orange"
            android:textSize="@dimen/button_size"
            tools:ignore="RelativeOverlap" />
    </com.google.android.flexbox.FlexboxLayout>

    <RelativeLayout
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/text_margin"
            android:src="@drawable/female" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator"
        android:background="@color/separator" />
</LinearLayout>